# MyFormat

./: CMakeLists.txt  README.md
Main/: CMakeLists.txt  main.cpp
libs/Formatter/: CMakeLists.txt
libs/Formatter/include/common/: os.h
libs/Formatter/include/core/: formatConf.h
libs/Formatter/include/format/: formatter.h  messageFormatter.h  streams.h
libs/Formatter/include/timer/: StopWatch.h
libs/tests/include/: testFormat.h  testThreads0.h  testThreads1.h
